<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/bluebottom"
    android:orientation="horizontal"
    android:layout_height="100dp">

    <LinearLayout
        android:layout_width="100dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="100dp">
        <TextView
            style="@style/schoolinfo_bottom_school_details_tv"
            android:text="@string/schoolinfo_school_situation"/>
        <TextView
            style="@style/schoolinfo_bottom_school_details_tv"
            android:text="@string/schoolinfo_schools_departments"/>
        <TextView
            style="@style/schoolinfo_bottom_school_details_tv"
            android:text="@string/schoolinfo_education_teaching"
            />
        <TextView
            style="@style/schoolinfo_bottom_school_details_tv"
            android:text="@string/schoolinfo_scientific_research"/>
</LinearLayout>
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="3">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/icon"/>
</LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
            android:layout_gravity="center_horizontal"
        android:src="@mipmap/weibologin"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/qqlogin"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@mipmap/weixinlogin"/>

    </LinearLayout>

</LinearLayout>
